VQ-3473: Ability to Add Risk (Grey Out Client Information and Display Dynamic Fields Based on Product and Subclass)

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -112,7 +112,9 @@
                                 [selectedCountryISO]="CountryISO.Kenya"
                                 [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
                                 [phoneValidation]="true" [(ngModel)]="clientPhone" #clientPhoneInput="ngModel"
-                                [numberFormat]="PhoneNumberFormat.National" (ngModelChange)="onPhoneInputChange()">
+                                [numberFormat]="PhoneNumberFormat.National" (ngModelChange)="onPhoneInputChange()"
+                                disabled
+                            >
                             </ngx-intl-tel-input>
                             <div *ngIf="clientPhoneInput.errors?.['validatePhoneNumber']?.['valid'] === false"
                                 class="form-text text-danger">
