--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.css
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.css
@@ -139,3 +139,9 @@
     padding: 5px 0;
     height: 30px; /* Adjust this value to fit your design */
 }
+.scrollable-container {
+    max-height: 430px; /* Adjust the height as needed */
+    overflow-y: auto;
+    padding-right: 10px; /* Add some padding for a better scrollbar view */
+  }
+  
