VQ-3473: Ability to Add Risk (Grey Out Client Information and Display Dynamic Fields Based on Product and Subclass)

--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -179,7 +179,7 @@
                     </ng-template>
 
                     <ng-template pTemplate="body" let-risk>
-                        <tr [class.p-highlight]="risk === selectedRisk" (click)="onRiskSelect(risk)">
+                        <tr [class.p-highlight]="risk === selectedRisk" (click)="onRiskSelect(risk)" style="cursor: default">
                             <td>{{ risk.propertyId }}</td>
                             <td class="text-start">{{ risk.coverTypeDescription || risk.coverTypeShortDescription}}</td>
                             <!-- <td>{{ risk.sectionsDetails[0]?.limitAmount | number  }}</td> -->
