--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -425,7 +425,7 @@
                                 <ng-template pTemplate="header">
                                     <tr>
                                         <th>{{ "lms.grp.quotation.summary.category_description" | translate }}</th>
-                                        <th>{{ "lms.grp.quotation.summary.multiple_of_earnings | translate }}</th>
+                                        <th>{{ "lms.grp.quotation.summary.multiple_of_earnings" | translate }}</th>
                                         <!-- <th>Access group</th> -->
                                         <th>{{ "lms.grp.quotation.summary.select_rate" | translate }}</th>
                                         <th>{{ "lms.grp.quotation.summary.premium_mask" | translate }}</th>
@@ -433,11 +433,11 @@
                                 </ng-template>
                                 <ng-template pTemplate="body" let-categoryDetailsSummary>
                                     <tr>
-                                        <td id="tdStyle">{{ categoryDetailsSummary.category_category | titlecase}}</td>
+                                        <td id="tdStyle">{{ categoryDetailsSummary.category_category }}</td>
                                         <td id="tdStyle">{{ categoryDetailsSummary.period}}</td>
                                         <!-- <td id="tdStyle">{{categorySummary.category_category}}</td> -->
                                         <td id="tdStyle">{{ categoryDetailsSummary.use_cvr_rate}}</td>
-                                        <td id="tdStyle">{{ categoryDetailsSummary.premium_mask_desc | titlecase}}</td>
+                                        <td id="tdStyle">{{ categoryDetailsSummary.premium_mask_desc }}</td>
                                     </tr>
                                 </ng-template>
                             </p-table>
@@ -454,12 +454,12 @@
                                 <ng-template pTemplate="header">
                                     <tr>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('cvt_desc')" style="text-align: left;">{{ "lms.grp.quotation.summary.cover_type" | translate }}</th>
-                                        <th *ngIf="selectedColumnsDependantLimits.includes('dty_sht_desc')">{{ "lms.grp.quotation.summary.dependant_type translate }}</th>
+                                        <th *ngIf="selectedColumnsDependantLimits.includes('dty_sht_desc')">{{ "lms.grp.quotation.summary.dependant_type" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('maximum_type_allowed')">{{ "lms.grp.quotation.summary.lives_covered" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('minimum_amt')">{{ "lms.grp.quotation.summary.minimum_amount" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('limit_amount')">{{ "lms.grp.quotation.summary.maimum_limit_amount" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('rate')">{{ "lms.grp.quotation.summary.rate" | translate }}</th>
-                                        <th *ngIf="selectedColumnsDependantLimits.includes('category_rate_division_factor')">{{ "lms.grp.quotation.summary.division_factor" | translate }}</th>
+                                        <th *ngIf="selectedColumnsDependantLimits.includes('category_rate_division_factor')">{{ "lms.grp.quotation.summary.rate_division_factor" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('sum_assured_percentage')">{{ "lms.grp.quotation.summary.percentage_of_main_sa" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('cover_inbuilt')">{{ "lms.grp.quotation.summary.inbuilt" | translate }}</th>
                                         <th *ngIf="selectedColumnsDependantLimits.includes('accelerator')">{{ "lms.grp.quotation.summary.accelerated" | translate }}</th>
@@ -489,7 +489,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                        (click)="closeCategorySummary()">{{ "lms.grp.quotation.summary.back_to_summary| translate }}</button>
+                        (click)="closeCategorySummary()">{{ "lms.grp.quotation.summary.back_to_summary" | translate }}</button>
                     </div>
                 </div>
             </div>
